--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="src/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
